@@ -48,13 +48,15 @@ $GLOBALS['xoopsTpl']->assign('company', $xoopsModuleConfig['form_company']);
 $GLOBALS['xoopsTpl']->assign('location', $xoopsModuleConfig['form_location']);
 $GLOBALS['xoopsTpl']->assign('phone', $xoopsModuleConfig['form_phone']);
 $GLOBALS['xoopsTpl']->assign('address', $xoopsModuleConfig['form_address']);
-
 $GLOBALS['xoopsTpl']->assign('map', $xoopsModuleConfig['embed_maps']);
-/*end Modules options*/
-
-$GLOBALS['xoopsTpl']->assign('breadcrumb', '<li><a href="' . XOOPS_URL . '">' . _YOURHOME . '</a></li> <li class="active">' . $xoopsModule->name().'</li>');
 $GLOBALS['xoopsTpl']->assign('info', xoops_getModuleOption('contact_info', 'contact'));
 $GLOBALS['xoopsTpl']->assign('contact_default', xoops_getModuleOption('contact_default', 'contact'));
+
+if ($xoopsModuleConfig['show_breadcrumbs']) {
+    $GLOBALS['xoopsTpl']->assign('show_breadcrumbs', true);
+    $GLOBALS['xoopsTpl']->assign('breadcrumb', '<li><a href="' . XOOPS_URL . '">' . _YOURHOME . '</a></li> <li class="active">' . $xoopsModule->name().'</li>');
+}
+/*end Modules options*/
 
 $uid = is_object($xoopsUser) ? $xoopsUser->getVar('uid') : 0;
 $GLOBALS['xoopsTpl']->assign('contact_uid', $uid);
